cabal-version:       2.4

name:                lastpass-tui
version:             0.1.0.0
synopsis:            Lastpass terminal user interface
-- description:
homepage:            https://github.com/skykanin/lastpass-tui
-- bug-reports:
license:             GPL-3.0-or-later
license-file:        LICENSE
author:              skykanin
maintainer:          3789764+skykanin@users.noreply.github.com
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md

common shared-properties
  default-language: Haskell2010
  default-extensions: OverloadedStrings

executable lpt
  import:              shared-properties
  build-depends:       base == 4.*
                     , brick
                     , lpt-lib
  main-is:             Main.hs
  hs-source-dirs:      src
  ghc-options:         -threaded -Wall

library lpt-lib
  import:              shared-properties
  build-depends:       base == 4.*
                     , brick
  exposed-modules:     Main
  hs-source-dirs:      src, src/Lpt
  ghc-options:         -Wall
