cabal-version:       2.4

name:                lastpass-tui
version:             0.1.0.0
synopsis:            Lastpass terminal user interface
-- description:
homepage:            https://github.com/skykanin/lastpass-tui
-- bug-reports:
license:             GPL-3.0-or-later
license-file:        LICENSE
author:              skykanin, allmeta
maintainer:          3789764+skykanin@users.noreply.github.com
-- copyright:
 category:           Tool
build-type:          Simple
extra-source-files:  CHANGELOG.md

common shared-properties
  default-language: Haskell2010
  default-extensions: OverloadedStrings

executable lpt
  import:              shared-properties
  build-depends:       base == 4.*
                     , lpt-lib
  main-is:             Main.hs
  hs-source-dirs:      src
  ghc-options:         -threaded -Wall

library lpt-lib
  import:              shared-properties
  build-depends:       base == 4.*
                     , aeson
                     , brick
                     , bytestring
                     , microlens-th
                     , process
                     , regex
                     , text
                     , unordered-containers
                     , vty
  exposed-modules:     CLI
                     , Parse.Encode
                     , Parse.Decode
                     , Parse.Types
                     , UI.Login
  hs-source-dirs:      src, src/Lpt
  ghc-options:         -Wall

  
test-suite properties
  type:                exitcode-stdio-1.0
  main-is:             Properties.hs
  build-depends:       base == 4.*
                     , aeson
                     , bytestring
                     , lpt-lib
                     , QuickCheck >= 2.14
                     , tasty
                     , tasty-quickcheck
                     , unordered-containers
  default-language:    Haskell2010
  hs-source-dirs:      test
